# brainfuck

./: Cargo.toml  LICENSE  README.md
examples/: bubblesort.bf  gameoflife.bf  move_cell.bf  quicksort.bf  ticktactoe.bf
scripts/: disassemble_binary.sh
src/: args.rs  brainfuck.rs  main.rs
src/brainfuck/: commands.rs  io.rs  jit.rs  vm.rs
src/brainfuck/commands/: common.rs  config.rs  debug.rs  disassemble.rs  jit.rs  run.rs
src/brainfuck/io/: base.rs  console.rs  string.rs
src/brainfuck/jit/: ast.rs  codegen.rs  jit.rs
src/brainfuck/jit/codegen/: arm.rs  code_generator.rs
src/brainfuck/vm/: debugger.rs  opcode.rs  program.rs  vm.rs
